--- a/README.Rmd
+++ b/README.Rmd
@@ -20,7 +20,7 @@ knitr::opts_chunk$set(
 [![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://lifecycle.r-lib.org/articles/stages.html#experimental)
 <!-- badges: end -->
 
-`robbins1985` implements the non-parametric and linear empirical Bayes estimator of means variances proposed by [Robbins (1985)](https://doi.org/10.1073/pnas.82.6.1571). `robbins1985` provides a single function: `estimate` that calculates the proposed estimators as well as the statics used for their calculation.
+`robbins1985` implements the non-parametric and linear empirical Bayes estimator of means variances proposed by [Robbins (1985)](https://doi.org/10.1073/pnas.82.6.1571). `robbins1985` provides a single function: `estimate` that calculates the proposed estimators as well as the statistics used for their calculation.
 
 ## Installation
 
